DeleteUser bug fixed

--- a/DateApp/wwwroot/Admin/AdminPanel.html
+++ b/DateApp/wwwroot/Admin/AdminPanel.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,15 +51,15 @@
             margin-top: 10px;
         }
 
-            .btn:hover {
-                background-color: #4a2fc1;
-                box-shadow: 0 4px 12px rgba(95, 65, 217, 0.3);
-            }
+        .btn:hover {
+            background-color: #4a2fc1;
+            box-shadow: 0 4px 12px rgba(95, 65, 217, 0.3);
+        }
 
-            .btn:focus {
-                outline: none;
-                box-shadow: 0 0 0 3px rgba(95, 65, 217, 0.4);
-            }
+        .btn:focus {
+            outline: none;
+            box-shadow: 0 0 0 3px rgba(95, 65, 217, 0.4);
+        }
 
 
         .btn-sm {
@@ -73,14 +74,14 @@
             background-color: #dc3545;
         }
 
-            .btn-danger:hover {
-                background-color: #c82333;
-                box-shadow: 0 4px 12px rgba(220, 53, 69, 0.3);
-            }
+        .btn-danger:hover {
+            background-color: #c82333;
+            box-shadow: 0 4px 12px rgba(220, 53, 69, 0.3);
+        }
 
-            .btn-danger:focus {
-                box-shadow: 0 0 0 3px rgba(220, 53, 69, 0.4);
-            }
+        .btn-danger:focus {
+            box-shadow: 0 0 0 3px rgba(220, 53, 69, 0.4);
+        }
 
 
 
@@ -132,15 +133,15 @@
             transition: opacity 0.3s ease;
         }
 
-            .toggle-password:hover {
-                opacity: 0.7;
-            }
+        .toggle-password:hover {
+            opacity: 0.7;
+        }
 
-            
-            .toggle-password.visible {
-                background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%235f41d9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/><circle cx="12" cy="12" r="3"/></svg>');
-                color: #5f41d9;
-            }
+
+        .toggle-password.visible {
+            background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%235f41d9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/><circle cx="12" cy="12" r="3"/></svg>');
+            color: #5f41d9;
+        }
 
         input:focus,
         select:focus {
@@ -158,7 +159,7 @@
             max-height: 800px;
             background-color: #fff;
             border-radius: 20px;
-            box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
             overflow: hidden;
             display: flex;
             flex-direction: row;
@@ -174,12 +175,12 @@
             flex-direction: column;
         }
 
-            .sidebar h3 {
-                margin-top: 0;
-                font-size: 22px;
-                margin-bottom: 30px;
-                text-align: center;
-            }
+        .sidebar h3 {
+            margin-top: 0;
+            font-size: 22px;
+            margin-bottom: 30px;
+            text-align: center;
+        }
 
         .nav-item {
             margin: 10px 0;
@@ -190,10 +191,10 @@
             font-size: 16px;
         }
 
-            .nav-item:hover,
-            .nav-item.active {
-                background-color: #4a2fc1;
-            }
+        .nav-item:hover,
+        .nav-item.active {
+            background-color: #4a2fc1;
+        }
 
         .sidebar .btn {
             margin-top: auto;
@@ -204,11 +205,11 @@
             box-sizing: border-box;
         }
 
-            .sidebar .btn:hover {
-                background-color: #f0e DFF;
-                color: #4a2fc1;
-                box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-            }
+        .sidebar .btn:hover {
+            background-color: #f0e DFF;
+            color: #4a2fc1;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
 
 
         .content {
@@ -219,14 +220,14 @@
             background-color: #fdfcff;
         }
 
-            .content h3 {
-                color: #333;
-                margin-top: 0;
-                margin-bottom: 25px;
-                border-bottom: 1px solid #eee;
-                padding-bottom: 10px;
-                font-size: 20px;
-            }
+        .content h3 {
+            color: #333;
+            margin-top: 0;
+            margin-bottom: 25px;
+            border-bottom: 1px solid #eee;
+            padding-bottom: 10px;
+            font-size: 20px;
+        }
 
 
 
@@ -234,12 +235,13 @@
             width: 100%;
             border-collapse: collapse;
             margin-bottom: 20px;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
             border-radius: 8px;
             overflow: hidden;
         }
 
-        th, td {
+        th,
+        td {
             border: none;
             border-bottom: 1px solid #eee;
             padding: 14px 16px;
@@ -277,24 +279,25 @@
             width: 100%;
         }
 
-            .form-inline input,
-            .form-inline select {
-                flex: 1;
-                margin: 0;
-            }
+        .form-inline input,
+        .form-inline select {
+            flex: 1;
+            margin: 0;
+        }
 
-            .form-inline .btn {
-                white-space: nowrap;
-                height: auto;
-                align-self: center;
-                margin: 0;
-            }
+        .form-inline .btn {
+            white-space: nowrap;
+            height: auto;
+            align-self: center;
+            margin: 0;
+        }
 
         select {
             -webkit-appearance: none;
             -moz-appearance: none;
             appearance: none;
-            background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%235f41d9"><path d="M7 10l5 5 5-5H7z"/></svg>'); /* Ok rengi güncellendi */
+            background-image: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%235f41d9"><path d="M7 10l5 5 5-5H7z"/></svg>');
+            /* Ok rengi güncellendi */
             background-repeat: no-repeat;
             background-position: right 15px center;
             background-size: 18px;
@@ -302,7 +305,8 @@
         }
 
 
-        #usersTab > .btn, #rolesTab > .btn {
+        #usersTab>.btn,
+        #rolesTab>.btn {
             margin-bottom: 15px;
             display: inline-block;
             width: auto;
@@ -340,12 +344,12 @@
                 border-radius: 0;
             }
 
-                .sidebar h3 {
-                    width: 100%;
-                    text-align: center;
-                    margin-bottom: 10px;
-                    font-size: 18px;
-                }
+            .sidebar h3 {
+                width: 100%;
+                text-align: center;
+                margin-bottom: 10px;
+                font-size: 18px;
+            }
 
             .nav-item {
                 margin: 5px;
@@ -371,21 +375,22 @@
                 gap: 10px;
             }
 
-                .form-inline input,
-                .form-inline select,
-                .form-inline .btn {
-                    width: 100%;
-                }
+            .form-inline input,
+            .form-inline select,
+            .form-inline .btn {
+                width: 100%;
+            }
 
-                .form-inline .btn {
-                    order: 1;
-                }
+            .form-inline .btn {
+                order: 1;
+            }
 
             table {
                 font-size: 14px;
             }
 
-            th, td {
+            th,
+            td {
                 padding: 10px 8px;
             }
         }
@@ -401,6 +406,7 @@
             padding-right: 45px !important;
             background-position: right 15px center;
         }
+
         .status-badge {
             padding: 4px 8px;
             border-radius: 12px;
@@ -425,6 +431,7 @@
         .filter-buttons {
             margin-bottom: 15px;
         }
+
         .scrollable-table {
             max-height: 70vh;
             overflow-y: auto;
@@ -433,17 +440,18 @@
             margin-top: 15px;
         }
 
-            .scrollable-table::-webkit-scrollbar {
-                width: 8px;
-                background-color: #f5f5f5;
-            }
+        .scrollable-table::-webkit-scrollbar {
+            width: 8px;
+            background-color: #f5f5f5;
+        }
 
-            .scrollable-table::-webkit-scrollbar-thumb {
-                background-color: #5f41d9;
-                border-radius: 4px;
-            }
+        .scrollable-table::-webkit-scrollbar-thumb {
+            background-color: #5f41d9;
+            border-radius: 4px;
+        }
     </style>
 </head>
+
 <body>
     <div class="container" id="loginContainer">
         <h2>Yönetici Girişi</h2>
@@ -501,7 +509,11 @@
                 </div>
                 <button class="btn" onclick="loadRoles()">Rolleri Yenile</button>
                 <table>
-                    <thead><tr><th>Rol Adı</th></tr></thead>
+                    <thead>
+                        <tr>
+                            <th>Rol Adı</th>
+                        </tr>
+                    </thead>
                     <tbody id="rolesTableBody"></tbody>
                 </table>
             </div>
@@ -753,13 +765,11 @@
                 headers: authHeaders(),
                 body: JSON.stringify({ username: username })
             })
-                .then(response => {
+                .then(async response => {
                     if (!response.ok) {
-                        return handleFetchError(response);
+                        const errorData = await response.text();
+                        throw new Error(errorData);
                     }
-                    return true;
-                })
-                .then(() => {
                     alert(`'${username}' kullanıcısı başarıyla silindi.`);
                     loadUsers();
                 })
@@ -968,6 +978,7 @@
             modifyUserRole('remove');
         }
         //yeni fonksiyon
+
         function loadComplaintsRequests(type = 'all') {
             let endpoint = '/api/Admin/GetAllComplaintAndRequests';
             if (type === 'complaint') endpoint = '/api/Admin/GetAllComplaint';
@@ -1051,4 +1062,5 @@
 
     </script>
 </body>
+
 </html>
